--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,10 @@ edition = "2021"
 libc="*"
 blas = "0.22.0"
 lapack = "0.19.0"
+blas-src = {version ="*", features=["intel-mkl"]}
+lapack-src = {version="*", features=["intel-mkl"]}
 rayon = "1.5.2"
+rand = "*"
+rand_distr = "*"
+
+[dev-dependencies]
